removed some unused pictures, added in project placeholder with notice

--- a/index.html
+++ b/index.html
@@ -92,18 +92,18 @@
                             </div>
                         </section>
                     </div>
-                    <!--<div class="4u">-->
-                        <!--&lt;!&ndash; Feature &ndash;&gt;-->
-                        <!--<section>-->
-                            <!--<a href="http://jsfiddle.net/Nrnh/7aas381y/14/" class="image featured"><img src="images/pic03.jpg" alt="" /></a>-->
-                            <!--<header>-->
-                                <!--<h3>Last Week</h3>-->
-                            <!--</header>-->
+                    <div class="4u">
+                        <!-- Feature -->
+                        <section>
+                            <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+                            <header>
+                                <h3>More Examples Coming Shortly</h3>
+                            </header>
                             <!--<p>This was another weekend work assignment that I collaborated on with Noah Holmes and <a href="https://www.linkedin.com/pub/rebecca-conley/74/599/521" target="_blank">Rebecca Conley</a>. You enter in your last.fm username, and it returns a list of 10 of your friends and who their top artist for the week was. This was our first foray into working with APIs, and as a music lover, I came up with the idea for this because this was not a feature that the last.fm site proper actually had.</p>-->
                             <!--<p><b><a href="http://jsfiddle.net/Nrnh/7aas381y/14/" target="_blank">Check out the project on JSFiddle</a></b></p>-->
                             <!--<p><b><a href="https://github.com/gregburton/last-week" target="_blank">Source code on GitHub</a></b></p>-->
-                        <!--</section>-->
-                    <!--</div>-->
+                        </section>
+                    </div>
                 </div>
             </section>
         </div>
