--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
                     <div class="4u">
                         <!-- Feature -->
                         <section>
-                            <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+                            <a href="http://fiddle.jshell.net/7aas381y/147/show/light/" class="image featured" target="_blank"><img src="images/last_week_small.png" alt="" /></a>
                             <header>
-                                <h3>More Examples Coming Shortly</h3>
+                                <h3>Last Week</h3>
                             </header>
-                            <!--<p>This was another weekend work assignment that I collaborated on with Noah Holmes and <a href="https://www.linkedin.com/pub/rebecca-conley/74/599/521" target="_blank">Rebecca Conley</a>. You enter in your last.fm username, and it returns a list of 10 of your friends and who their top artist for the week was. This was our first foray into working with APIs, and as a music lover, I came up with the idea for this because this was not a feature that the last.fm site proper actually had.</p>-->
-                            <!--<p><b><a href="http://jsfiddle.net/Nrnh/7aas381y/14/" target="_blank">Check out the project on JSFiddle</a></b></p>-->
-                            <!--<p><b><a href="https://github.com/gregburton/last-week" target="_blank">Source code on GitHub</a></b></p>-->
+                            <p>This was another weekend assignment that I worked on with Noah Holmes and <a href="https://www.linkedin.com/pub/rebecca-conley/74/599/521" target="_blank">Rebecca Conley</a>. You enter in your last.fm username, and it returns a list of your friends and their top artist for the past week, along with playcount. This was our first foray into working with APIs and JavaScript. I came up with the idea for this because this was not a feature that the last.fm site proper actually had (which bugged me).</p>
+                            <p><b><a href="http://fiddle.jshell.net/7aas381y/147/show/light/" target="_blank">Check out the project here</a></b></p>
+                            <p><b><a href="http://jsfiddle.net/7aas381y/147/" target="_blank">Source code on JSFiddle</a></b></p>
                         </section>
                     </div>
                 </div>
