--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
                                 <h3>ramblethru</h3>
                             </header>
                             <p>This was my final project for The Iron Yard. I worked on it with <a href="https://www.linkedin.com/pub/noah-holmes/a7/725/58a" target="_blank">Noah Holmes</a> and <a href="https://www.linkedin.com/pub/danielle-heckman/15/225/487" target="_blank">Danielle Heckman</a> over the course of three weeks. It is a travel planning website that aggregates tips from several APIs and other ramblethru users, while presenting the data in an intuitive and elegant interface. Tips can be saved for easy access later, such as from your smartphone when you are at your destination and want to remember what that top-rated restaurant was.</p>
-                            <p><b><a href="http://ramblethru.com" target="_blank">Check out the project</a></b><br>
-                            <b><a href="http://vimeo.com/114915914" target="_blank">Video of Demo Day presentation</a></b><br>
-                            <b><a href="https://github.com/Ramblethru/Ramblethru" target="_blank">Source code</a></b></p>
+                            <p><b><a href="http://ramblethru.com" target="_blank">The project</a></b><br>
+                            <b><a href="https://github.com/Ramblethru/Ramblethru" target="_blank">Source code</a></b><br>
+                            <b><a href="http://vimeo.com/114915914" target="_blank">Video of Demo Day presentation</a></b>
+                            </p>
                         </section>
                     </div>
                     <div class="4u">
@@ -86,7 +87,7 @@
                                 <h3>Mo' Problems</h3>
                             </header>
                             <p>This was a weekend work assignment that I collaborated on with <a href="http://nickpassarella.github.io/" target="_blank">Nick Passarella</a>. He had to be out of town for the weekend, so we dilligently planned out the structure and division of labor for the site in the couple of hours we had before he left. It was excellent practice in working on a project with remote team members, and also got us a lot more comfortable with Git.</p><br>
-                                <p><b><a href="https://boiling-thicket-7893.herokuapp.com" target="_blank">Check out the project</a></b>
+                                <p><b><a href="https://boiling-thicket-7893.herokuapp.com" target="_blank">The project</a></b>
                                 <br><b><a href="https://github.com/nickpassarella/problem_tickets" target="_blank">Source code</a></b></p>
                         </section>
                     </div>
@@ -98,7 +99,7 @@
                                 <h3>Last Week</h3>
                             </header>
                             <p>This was another weekend assignment that I worked on with Noah Holmes and <a href="https://www.linkedin.com/pub/rebecca-conley/74/599/521" target="_blank">Rebecca Conley</a>. This was our first foray into working with APIs, as well as JavaScript. You enter in your <a href="http://last.fm" target="_blank">username</a>, and it returns a list of your friends and their top artist for the past week, along with playcount. I came up with the idea for this project because this was not a feature that the last.fm site proper actually had (which bugged me).</p>
-                            <p><b><a href="http://fiddle.jshell.net/7aas381y/147/show/light/" target="_blank">Check out the project</a></b><br>
+                            <p><b><a href="http://fiddle.jshell.net/7aas381y/147/show/light/" target="_blank">The project</a></b><br>
                             <b><a href="http://jsfiddle.net/7aas381y/147/" target="_blank">Source code</a></b></p>
                         </section>
                     </div>
