numerous tweaks to copy; added link to surf and paddle

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                     <div class="bio">
 <strong>It all began about 15 years ago, with a middle-school foray into HTML.</strong> The initial results of those efforts have been lost to history. A hobby quickly grew into building and maintaining websites pro-bono for the church and library in my small Vermont hometown, which continued into my college years.
                         <br>
-                        <br>Skip ahead a bit, and I decided to revisit these web development roots. I relocated from Boston, MA to Durham, NC, and enrolled in an intensive 3-month Rails Engineering course at <a href="http://theironyard.com/locations/raleigh-durham/" target="_blank">The Iron Yard Academy</a>. I spent 80-100 hours a week learning the ins-and-outs of Ruby on Rails and associated technologies like CSS, SQL databases, GitHub, JavaScript, and APIs. This formed a solid foundation in back-end work that I look forward to building on.
+                        <br>Skip ahead a bit, and I decided to revisit these web development roots. I relocated from Boston, MA to Durham, NC, and enrolled in an intensive 3-month Rails Engineering course at <a href="http://theironyard.com/locations/raleigh-durham/" target="_blank">The Iron Yard Academy</a>. I spent 80-100 hours a week learning the ins-and-outs of Ruby on Rails and associated technologies like CSS, SQL databases, GitHub, JavaScript, and APIs. This formed a solid foundation that I look forward to building on.
                         <br>
-                        <br>In the time between those first two paragraphs, I amassed eight years of higher-ed IT support experience at three different institutions, obtained a number of technical certifications, and earned a master's degree in History. I think this multi-faceted background is a major asset in several realms, whether it be critical thinking and analysis, producing quality work on a quick turnaround, or communicating with clients and colleagues effectively.
+                        <br>In the time between those first two paragraphs, I amassed eight years of higher-ed IT support experience at three different institutions, obtained a number of technical certifications, and earned a master's degree in History. This multi-faceted background has been an asset in several realms, whether it be critical thinking and analysis, producing quality work on a quick turnaround, or communicating with clients and colleagues effectively.
                         <br>
-                        <br>When I'm not coding, you'll probably find me outside running, going to the shows of bands that most people haven't heard of, playing pick-up softball, rummaging through the vinyl bins at the record store, wheeling and dealing with my fantasy baseball teams, noodling on the guitar, getting overly expensive <i>cawfee</i>, or cracking wise.
+                        <br>When I'm not coding, you'll probably find me outside running, going to the shows of bands that most people haven't heard of, playing pick-up softball, rummaging through the vinyl bins at the record store, managing my fantasy baseball rosters, noodling on the guitar, getting overly expensive <i>cawfee</i>, or cracking wise.
                         <br>
                         <br><strong>I am currently looking for a junior developer position in the Durham, NC area.</strong> Poke around, take a look at some of my work, and if you like what you see, please drop me a line.
                     </div>
@@ -72,10 +72,11 @@
                             <header>
                                 <h3>ramblethru</h3>
                             </header>
-                            <p>This was my final project for The Iron Yard. I worked on it with <a href="https://www.linkedin.com/pub/noah-holmes/a7/725/58a" target="_blank">Noah Holmes</a> and <a href="https://www.linkedin.com/pub/danielle-heckman/15/225/487" target="_blank">Danielle Heckman</a> over the course of three weeks. It is a travel planning website that aggregates tips from several APIs and other ramblethru users, while presenting the data in an intuitive and elegant interface. Tips can be saved for easy access later, such as from your smartphone when you are at your destination and want to remember what that top-rated restaurant was.</p>
-                            <p><b><a href="http://ramblethru.com" target="_blank">The project</a></b><br>
-                            <b><a href="https://github.com/Ramblethru/Ramblethru" target="_blank">Source code</a></b><br>
-                            <b><a href="http://vimeo.com/114915914" target="_blank">Video of Demo Day presentation</a></b>
+                            <p>This was my final project for The Iron Yard. I worked on it with <a href="https://www.linkedin.com/pub/noah-holmes/a7/725/58a" target="_blank">Noah Holmes</a> and <a href="https://www.linkedin.com/pub/danielle-heckman/15/225/487" target="_blank">Danielle Heckman</a> over the course of three weeks. It is a travel planning website that aggregates tips from several APIs and other ramblethru users, while presenting the data in an intuitive and elegant interface. Tips can be saved for easy access later, such as from your smartphone when you are out at your destination.</p>
+                            <p>
+                                <b><a href="http://vimeo.com/114915914" target="_blank">Video of Demo Day presentation</a></b><br>
+                                <b><a href="http://ramblethru.com" target="_blank">View Live</a></b><br>
+                                <b><a href="https://github.com/Ramblethru/Ramblethru" target="_blank">Source Code</a></b>
                             </p>
                         </section>
                     </div>
@@ -87,20 +88,40 @@
                                 <h3>Mo' Problems</h3>
                             </header>
                             <p>This was a weekend work assignment that I collaborated on with <a href="http://nickpassarella.github.io/" target="_blank">Nick Passarella</a>. He had to be out of town for the weekend, so we dilligently planned out the structure and division of labor for the site in the couple of hours we had before he left. It was excellent practice in working on a project with remote team members, and also got us a lot more comfortable with Git.</p><br>
-                                <p><b><a href="https://boiling-thicket-7893.herokuapp.com" target="_blank">The project</a></b>
-                                <br><b><a href="https://github.com/nickpassarella/problem_tickets" target="_blank">Source code</a></b></p>
+                                <p><b><a href="https://boiling-thicket-7893.herokuapp.com" target="_blank">View Live</a></b>
+                                <br><b><a href="https://github.com/nickpassarella/problem_tickets" target="_blank">Source Code</a></b></p>
                         </section>
                     </div>
                     <div class="4u">
                         <!-- Feature -->
                         <section>
-                            <a href="http://fiddle.jshell.net/7aas381y/147/show/light/" class="image featured" target="_blank"><img src="images/last_week_small.png" alt="" /></a>
+                            <a href="http://fiddle.jshell.net/7aas381y/179/show/light/" class="image featured" target="_blank"><img src="images/last_week_small.png" alt="" /></a>
                             <header>
                                 <h3>Last Week</h3>
                             </header>
-                            <p>This was another weekend assignment that I worked on with Noah Holmes and <a href="https://www.linkedin.com/pub/rebecca-conley/74/599/521" target="_blank">Rebecca Conley</a>. This was our first foray into working with APIs, as well as JavaScript. You enter in your <a href="http://last.fm" target="_blank">username</a>, and it returns a list of your friends and their top artist for the past week, along with playcount. I came up with the idea for this project because this was not a feature that the last.fm site proper actually had (which bugged me).</p>
-                            <p><b><a href="http://fiddle.jshell.net/7aas381y/147/show/light/" target="_blank">The project</a></b><br>
-                            <b><a href="http://jsfiddle.net/7aas381y/147/" target="_blank">Source code</a></b></p>
+                            <p>This was another weekend assignment that I worked on with Noah Holmes and <a href="https://www.linkedin.com/pub/rebecca-conley/74/599/521" target="_blank">Rebecca Conley</a>. This was an early foray into working with APIs, as well as JavaScript. You enter in your <a href="http://last.fm" target="_blank">last.fm</a> username, and it returns a list of your friends and their top artist for the past week, along with playcount. I came up with the idea for this project because this was not a feature that the last.fm site proper actually had, and which I had wanted for years.</p>
+                            <p>
+                                <b><a href="http://fiddle.jshell.net/7aas381y/179/show/light/" target="_blank">View Live</a></b>
+                                <br>
+                                <b><a href="http://jsfiddle.net/7aas381y/179/" target="_blank">Source Code</a></b>
+                            </p>
+                        </section>
+                    </div>
+                </div>
+                <div class="row">
+                    <br><br>
+                    <div class="4u">
+                        <!-- Feature -->
+                        <section>
+                            <a href="https://gregburton.github.io/surfpaddle/" class="image featured" target="_blank"><img src="images/surfpaddle_small.png" alt="" /></a>
+                            <header>
+                                <h3>Surf and Paddle</h3>
+                            </header>
+                            <p>This was a one-night project early on in the course in which I was asked to build a pixel-perfect replica of a web page screen capture (no source code was provided). It was an excellent crash course in CSS, and I found myself using it as a styling reference in the weeks after when working on new assignments.</p>
+                            <p>
+                                <b><a href="https://gregburton.github.io/surfpaddle/" target="_blank">View Live</a></b><br>
+                                <b><a href="https://github.com/gregburton/surfpaddle" target="_blank">Source Code</a></b>
+                            </p>
                         </section>
                     </div>
                 </div>
