added todomvc assignment

--- a/index.html
+++ b/index.html
@@ -113,6 +113,20 @@
                     <div class="4u">
                         <!-- Feature -->
                         <section>
+                            <a href="https://gregburton.github.io/todomvc-jsonapi/" class="image featured" target="_blank"><img src="images/todos_small.png" alt="" /></a>
+                            <header>
+                                <h3>TodoMVC</h3>
+                            </header>
+                            <p>For this assignment, I had one night to build a controller to interact with a Backbone-powered version of the TodoMVC app, using ActiveModelSerializers to create JSON output.</p>
+                            <p>
+                                <b><a href="https://gregburton.github.io/todomvc-jsonapi/" target="_blank">View Live</a></b><br>
+                                <b><a href="https://github.com/gregburton/todomvc-jsonapi" target="_blank">Source Code</a></b>
+                            </p>
+                        </section>
+                    </div>
+                    <div class="4u">
+                        <!-- Feature -->
+                        <section>
                             <a href="https://gregburton.github.io/surfpaddle/" class="image featured" target="_blank"><img src="images/surfpaddle_small.png" alt="" /></a>
                             <header>
                                 <h3>Surf and Paddle</h3>
