updated copy to reflect proper links, and for brevity

--- a/index.html
+++ b/index.html
@@ -83,6 +83,21 @@
                     <div class="4u">
                         <!-- Feature -->
                         <section>
+                            <a href="http://fiddle.jshell.net/7aas381y/198/show/light/" class="image featured" target="_blank"><img src="images/last_week_small.png" alt="" /></a>
+                            <header>
+                                <h3>Last Week</h3>
+                            </header>
+                            <p>This was another weekend assignment that I initally worked on with Noah Holmes and <a href="https://www.linkedin.com/pub/rebecca-conley/74/599/521" target="_blank">Rebecca Conley</a>. This was an early foray into working with an API (in this case, for <a href="http://last.fm/api" target="_blank">last.fm</a>, as well as AJAX and jQuery. It returns a list of your friends and the top artist for each from the past week, along with play count. I came up with the idea for this project because this was a feature that was notably missing from the last.fm website.</p>
+                            <p>
+                                <b><a href="http://fiddle.jshell.net/7aas381y/198/show/light/" target="_blank">View Live</a></b>
+                                <br>
+                                <b><a href="http://jsfiddle.net/7aas381y/198/" target="_blank">Source Code</a></b>
+                            </p>
+                        </section>
+                    </div>
+                    <div class="4u">
+                        <!-- Feature -->
+                        <section>
                             <a href="https://boiling-thicket-7893.herokuapp.com" target="_blank" class="image featured"><img src="images/mo_problems_small.png" alt="" /></a>
                             <header>
                                 <h3>Mo' Problems</h3>
@@ -92,21 +107,7 @@
                                 <br><b><a href="https://github.com/nickpassarella/problem_tickets" target="_blank">Source Code</a></b></p>
                         </section>
                     </div>
-                    <div class="4u">
-                        <!-- Feature -->
-                        <section>
-                            <a href="http://fiddle.jshell.net/7aas381y/198/show/light/" class="image featured" target="_blank"><img src="images/last_week_small.png" alt="" /></a>
-                            <header>
-                                <h3>Last Week</h3>
-                            </header>
-                            <p>This was another weekend assignment that I worked on with Noah Holmes and <a href="https://www.linkedin.com/pub/rebecca-conley/74/599/521" target="_blank">Rebecca Conley</a>. This was an early foray into working with APIs, as well as AJAX and jQuery. You enter in your <a href="http://last.fm" target="_blank">last.fm</a> username, and it returns a list of your friends and their top artist for the past week, along with play count. I came up with the idea for this project because this was a feature that the last.fm site was lacking, but that I had wanted for a while.</p>
-                            <p>
-                                <b><a href="http://fiddle.jshell.net/7aas381y/198/show/light/" target="_blank">View Live</a></b>
-                                <br>
-                                <b><a href="http://jsfiddle.net/7aas381y/198/" target="_blank">Source Code</a></b>
-                            </p>
-                        </section>
-                    </div>
+
                 </div>
                 <div class="row">
                     <br><br>
@@ -117,9 +118,9 @@
                             <header>
                                 <h3>TodoMVC</h3>
                             </header>
-                            <p>For this assignment, I had one night to build a controller to interact with a Backbone-powered version of the TodoMVC app, using ActiveModelSerializers to create JSON output.</p>
+                            <p>For this assignment, I had one night to do extensive research on how to use using ActiveModelSerializers to create JSON output. Once that was done, I then had to build out a controller to interact with a Backbone-powered version of the TodoMVC app.</p>
                             <p>
-                                <b><a href="https://gregburton.github.io/todomvc-jsonapi/" target="_blank">View Live</a></b><br>
+                                <b><a href="http://todomvc.com/examples/backbone/" target="_blank">Demo of Backbone Version</a></b><br>
                                 <b><a href="https://github.com/gregburton/todomvc-jsonapi" target="_blank">Source Code</a></b>
                             </p>
                         </section>
@@ -131,7 +132,7 @@
                             <header>
                                 <h3>Surf and Paddle</h3>
                             </header>
-                            <p>This was a one-night project early on in the course in which I was asked to build a pixel-perfect replica of a web page screen capture (no source code was provided). It was an excellent crash course in CSS, and I found myself using it as a styling reference in the weeks after when working on new assignments.</p>
+                            <p>This was a one-night project early on in the course in which I built a pixel-perfect replica of a web page screen capture (no source code was provided). It was an excellent crash course in CSS that provided a useful point of reference regarding styling.</p>
                             <p>
                                 <b><a href="https://gregburton.github.io/surfpaddle/" target="_blank">View Live</a></b><br>
                                 <b><a href="https://github.com/gregburton/surfpaddle" target="_blank">Source Code</a></b>
