--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <header>
                                 <h3>Mo' Problems</h3>
                             </header>
-                            <p>This was a weekend work assignment that I collaborated on with <a href="http://nickpassarella.github.io/" target="_blank">Nick Passarella</a>. He had to be out of town for the weekend, so we dilligently planned out the structure and division of labor for the site in the couple of hours we had before he left. It was excellent practice in working on a project with remote team members, and also got us a lot more comfortable with Git.</p><br>
+                            <p>This was a weekend work assignment that I collaborated on with <a href="http://nickpassarella.github.io/" target="_blank">Nick Passarella</a>, and one of my first Rails apps. He had to be out of town for the weekend, so we dilligently planned out the structure and division of labor for the site in the couple of hours we had before he left. It was excellent practice in working on a project with remote team members, and also got us a lot more comfortable with Git and deploying to Heroku.</p>
                                 <p><b><a href="https://boiling-thicket-7893.herokuapp.com" target="_blank">View Live</a></b>
                                 <br><b><a href="https://github.com/nickpassarella/problem_tickets" target="_blank">Source Code</a></b></p>
                         </section>
