--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Greg Burton | Web Developer | Durham, NC</title>
+		<title>Greg Burton | Web Developer. Durham, NC.</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -34,15 +34,11 @@
                         </a>
                     </div>
                     <div class="bio">
-<strong>It all began about 15 years ago, with a middle-school foray into HTML.</strong> The initial results of those efforts have been lost to history. A hobby quickly grew into building and maintaining websites pro-bono for the church and library in my small Vermont hometown, which continued into my college years.
+<strong>It all began about 15 years ago, with a middle-school foray into HTML.</strong> A hobby quickly grew into building and maintaining websites pro-bono for the church and library in my small Vermont hometown. Skip ahead a bit, and I decided to revisit these web development roots. After a few years in Boston, MA, I enrolled in an intensive 3-month <a href="http://theironyard.com/academy/rails-engineering/" target="_blank">Rails Engineering</a> course at <a href="http://theironyard.com/locations/raleigh-durham/" target="_blank">The Iron Yard Academy</a> in Durham, NC. There, I spent 80-100 hours a week learning the ins-and-outs of Ruby on Rails and associated technologies.
                         <br>
-                        <br>Skip ahead a bit, and I decided to revisit these web development roots. I relocated from Boston, MA to Durham, NC, and enrolled in an intensive 3-month <a href="http://theironyard.com/academy/rails-engineering/" target="_blank">Rails Engineering</a> course at <a href="http://theironyard.com/locations/raleigh-durham/" target="_blank">The Iron Yard Academy</a>. I spent 80-100 hours a week learning the ins-and-outs of Ruby on Rails and associated technologies.<!-- like CSS, SQL databases, GitHub, JavaScript, and APIs. This formed a rock-solid foundation that I look forward to building on.-->
+                        <br>In addition, I have eight years of higher-ed IT support experience and a master's degree in History. When I'm not coding, you'll probably find me outside running, going to see bands most people haven't heard of, managing my fantasy baseball rosters, rummaging through the vinyl bins at the record store, noodling on the guitar, getting coffee, or cracking wise. <!--This multi-faceted background has been an asset in several realms, whether it be critical thinking and analysis, producing quality work on a quick turnaround, or communicating with clients and colleagues effectively.-->
                         <br>
-                        <br>In the time between those first two paragraphs, I amassed eight years of higher-ed IT support experience at three different institutions, obtained a number of technical certifications, and earned a master's degree in History. This multi-faceted background has been an asset in several realms, whether it be critical thinking and analysis, producing quality work on a quick turnaround, or communicating with clients and colleagues effectively.
-                        <br>
-                        <br>When I'm not coding, you'll probably find me outside running, going to the shows of bands that most people haven't heard of, playing pick-up softball, rummaging through the vinyl bins at the record store, managing my fantasy baseball rosters, noodling on the guitar, getting coffee, or cracking wise.
-                        <br>
-                        <br><strong>I am currently looking for a junior developer position in the Durham, NC area.</strong> Poke around, take a look at some of my work, and if you like what you see, please drop me a line.
+                        <br><strong>I am currently looking for a junior developer position in the Durham, NC area.</strong> Take a look around, and if you like what you see, please drop me a line.
                     </div>
                 </div>
                 <!-- Nav -->
