further revision to how face image is presented

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="bio-wrapper">
                     <div class="face">
                         <a href="#" class="image head">
-                            <img src="images/greg_burton_2.jpg" alt="Greg Burton"/>
+                            <img src="images/greg_burton.jpg" alt="Greg Burton"/>
                         </a>
                     </div>
                     <div class="bio">
