--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="bio">
 <strong>It all began about 15 years ago, with a middle-school foray into HTML.</strong> A hobby quickly grew into building and maintaining websites pro-bono for the church and library in my small Vermont hometown. Skip ahead a bit, and I decided to revisit these web development roots. After a few years in Boston, MA, I moved to Durham, NC and enrolled in an intensive 3-month <a href="http://theironyard.com/academy/rails-engineering/" target="_blank">Rails Engineering</a> course at <a href="http://theironyard.com/locations/raleigh-durham/" target="_blank">The Iron Yard Academy</a>. There, I spent 80-100 hours a week learning the ins-and-outs of Ruby on Rails and associated technologies.
                         <br>
-                        <br>In addition, I have eight years of higher-ed IT support experience and a master's degree in History. When I'm not coding, you'll probably find me outside running, going to see bands most people haven't heard of, managing my fantasy baseball rosters, rummaging through the vinyl bins at the record store, noodling on the guitar, getting coffee, or cracking wise.
+                        <br>In addition, I have eight years of higher-ed IT support experience and a master's degree in History. When I'm not coding, you'll probably find me outside running, going to see bands most people haven't heard of, managing my fantasy baseball rosters, getting coffee, or cracking wise.
                         <br>
                         <br><strong>I am currently looking for a junior developer position in the Durham, NC area.</strong> Take a look around, and if you like what you see, please drop me a line.
                     </div>
