further tweaks to page copy

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <header>
                                 <h3>Last Week</h3>
                             </header>
-                            <p>This was a weekend assignment that I initially worked on with Noah Holmes and <a href="https://www.linkedin.com/pub/rebecca-conley/74/599/521" target="_blank">Rebecca Conley</a>. This was an early foray into working with an API (in this case, for <a href="http://last.fm/api" target="_blank">last.fm</a>, as well as AJAX and jQuery. It returns a list of your friends and the top artist for each from the past week, along with play count. I came up with the idea for this project because this was a feature that was notably missing from the last.fm website.</p>
+                            <p>This was a weekend assignment that I initially worked on with Noah Holmes and <a href="https://www.linkedin.com/pub/rebecca-conley/74/599/521" target="_blank">Rebecca Conley</a>. It was an early foray into working with an API (in this case, for <a href="http://last.fm/api" target="_blank">last.fm</a>), as well as AJAX and jQuery. The request returns a list of your friends and the top artist for each from the past week, along with play count and links. I came up with the idea for this project because this was a feature that was notably missing from the last.fm website.</p>
                             <p>
                                 <b><a href="http://fiddle.jshell.net/7aas381y/198/show/light/" target="_blank">View Live</a></b>
                                 <br>
@@ -99,7 +99,7 @@
                             <header>
                                 <h3>Mo' Problems</h3>
                             </header>
-                            <p>This was another weekend assignment that I collaborated on with <a href="http://nickpassarella.github.io/" target="_blank">Nick Passarella</a>, and one of my first Rails apps. He had to be out of town for the weekend, so we diligently planned out the structure and division of labor for the site in the couple of hours we had before he left. It was excellent practice in working on a project with remote team members, and also got us a lot more comfortable with Git and deploying to Heroku.</p>
+                            <p>This was another weekend assignment that I collaborated on with <a href="http://nickpassarella.github.io/" target="_blank">Nick Passarella</a>, and was one of my first Rails apps. He had to be out of town for the weekend, so we diligently planned out the structure and division of labor for the site in the couple of hours we had before he left. It was excellent practice in working on a project with remote team members, and also got us a lot more comfortable with Git and deploying to Heroku.</p>
                                 <p><b><a href="https://boiling-thicket-7893.herokuapp.com" target="_blank">View Live</a></b>
                                 <br><b><a href="https://github.com/nickpassarella/problem_tickets" target="_blank">Source Code</a></b></p>
                         </section>
