edited mo problems copy to bring line count into agreement with other projects on that row

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             <header>
                                 <h3>Mo' Problems</h3>
                             </header>
-                            <p>This was another weekend assignment that I collaborated on with <a href="http://nickpassarella.github.io/" target="_blank">Nick Passarella</a>, and was one of my first Rails apps. He had to be out of town for the weekend, so we diligently planned out the structure and division of labor for the site in the couple of hours we had before he left. It was excellent practice in working on a project with remote team members, and also got us a lot more comfortable with Git and deploying to Heroku.</p>
+                            <p>This was another weekend assignment that I collaborated on with <a href="http://nickpassarella.github.io/" target="_blank">Nick Passarella</a>, and was one of my first Rails apps. He had to be out of town for the weekend, so we carefully planned out the structure of the site in the couple of hours we had before he left. It was excellent practice in working on a project with remote team members, and also got us a lot more comfortable with Git and deploying to Heroku.</p>
                                 <p><b><a href="https://boiling-thicket-7893.herokuapp.com" target="_blank">View Live</a></b>
                                 <br><b><a href="https://github.com/nickpassarella/problem_tickets" target="_blank">Source Code</a></b></p>
                         </section>
