Adjusted bio section copy

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <br>
                         <br>In addition, I have eight years of higher-ed IT support experience and a master's degree in history. When I'm not coding, you'll probably find me outside running, going to shows, managing my fantasy baseball rosters, getting coffee, or cracking wise.
                         <br>
-                        <br><strong>I am currently looking for a junior developer position in the Durham, NC area.</strong> Take a look around, and if you like what you see, please drop me a line.
+                        <br><strong>I am currently looking for a junior developer position in the Durham, NC area.</strong> Take a look around, and if you like what you see, I'd love to hear from you.
                     </div>
                 </div>
                 <!-- Nav -->
