styling changes to project descriptions

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
                             <header>
                                 <h3>ramblethru</h3>
                             </header>
-                            <p>This was my final project for The Iron Yard. I worked on it with <a href="https://www.linkedin.com/pub/noah-holmes/a7/725/58a" target="_blank">Noah Holmes</a> and <a href="https://www.linkedin.com/pub/danielle-heckman/15/225/487" target="_blank">Danielle Heckman</a> over the course of three weeks. It is a travel planning website that aggregates tips from several APIs and other ramblethru users, while presenting the data in an intuitive and elegant interface. Tips can be saved for easy access later, such as from your smartphone when you are out at your destination.</p>
+                            <div class="justify-words">
+                                This was my final project for The Iron Yard. I worked on it with <a href="https://www.linkedin.com/pub/noah-holmes/a7/725/58a" target="_blank">Noah Holmes</a> and <a href="https://www.linkedin.com/pub/danielle-heckman/15/225/487" target="_blank">Danielle Heckman</a> over the course of three weeks. It is a travel planning website that aggregates tips from several APIs and other ramblethru users, while presenting the data in an intuitive and elegant interface. Tips can be saved for easy access later, such as from your smartphone when you are out at your destination.
+                            </div>
+                            <br>
                             <p>
                                 <b><a href="http://vimeo.com/114915914" target="_blank">Video of Demo Day presentation</a></b><br>
                                 <b><a href="http://ramblethru.com" target="_blank">View Live</a></b><br>
@@ -84,7 +87,10 @@
                             <header>
                                 <h3>Last Week</h3>
                             </header>
-                            <p>This was a weekend assignment that I initially worked on with Noah Holmes and <a href="https://www.linkedin.com/pub/rebecca-conley/74/599/521" target="_blank">Rebecca Conley</a>. It was an early foray into working with an API (in this case, for <a href="http://last.fm/api" target="_blank">last.fm</a>), as well as AJAX and jQuery. The request returns a list of your friends and the top artist for each from the past week, along with play count and links. I came up with the idea for this project because this was a feature that was notably missing from the last.fm website.</p>
+                            <div class="justify-words">
+                                This was a weekend assignment that I initially worked on with Noah Holmes and <a href="https://www.linkedin.com/pub/rebecca-conley/74/599/521" target="_blank">Rebecca Conley</a>. It was an early foray into working with an API (in this case, for <a href="http://last.fm/api" target="_blank">last.fm</a>), as well as AJAX and jQuery. The request returns a list of your friends and the top artist for each from the past week, along with play count and links. I came up with the idea for this project because this was a feature that was notably missing from the last.fm website.
+                            </div>
+                            <br>
                             <p>
                                 <b><a href="http://fiddle.jshell.net/7aas381y/198/show/light/" target="_blank">View Live</a></b>
                                 <br>
@@ -99,9 +105,15 @@
                             <header>
                                 <h3>Mo' Problems</h3>
                             </header>
-                            <p>This was another weekend assignment that I collaborated on with <a href="http://nickpassarella.github.io/" target="_blank">Nick Passarella</a>, and was one of my first Rails apps. He had to be out of town for the weekend, so we carefully planned out the structure and division of labor for the site in the couple of hours we had before he left. It was excellent practice in working on a project with remote team members, and also got us a lot more comfortable with Git and deploying to Heroku.</p>
-                                <p><b><a href="https://boiling-thicket-7893.herokuapp.com" target="_blank">View Live</a></b>
-                                <br><b><a href="https://github.com/nickpassarella/problem_tickets" target="_blank">Source Code</a></b></p>
+                            <div class="justify-words">
+                                This was another weekend assignment that I collaborated on with <a href="http://nickpassarella.github.io/" target="_blank">Nick Passarella</a>, and was one of my first Rails apps. He had to be out of town for the weekend, so we carefully planned out the structure and division of labor for the site in the couple of hours we had before he left. It was excellent practice in working on a project with remote team members, and also got us a lot more comfortable with Git and deploying to Heroku.
+                            </div>
+                            <br>
+                            <p>
+                                <b><a href="https://boiling-thicket-7893.herokuapp.com" target="_blank">View Live</a></b>
+                                <br>
+                                <b><a href="https://github.com/nickpassarella/problem_tickets" target="_blank">Source Code</a></b>
+                            </p>
                         </section>
                     </div>
 
@@ -115,7 +127,10 @@
                             <header>
                                 <h3>TodoMVC</h3>
                             </header>
-                            <p>For this assignment, I had one night to do extensive research on how to use using ActiveModelSerializers to create JSON output. Once that was done, I then had to build out a controller to interact with a Backbone-powered version of the TodoMVC app.</p>
+                            <div class="justify-words">
+                                For this assignment, I had one night to do extensive research on how to use using ActiveModelSerializers to create JSON output. Once that was done, I then had to build out a controller to interact with a Backbone-powered version of the TodoMVC app.
+                            </div>
+                            <br>
                             <p>
                                 <b><a href="http://todomvc.com/examples/backbone/" target="_blank">Demo of Backbone Version</a></b><br>
                                 <b><a href="https://github.com/gregburton/todomvc-jsonapi" target="_blank">Source Code</a></b>
@@ -129,7 +144,10 @@
                             <header>
                                 <h3>Surf and Paddle</h3>
                             </header>
-                            <p>This was a one-night project early on in the course in which I built a pixel-perfect replica of a web page screen capture (no source code was provided). It was an excellent crash course in CSS that provided a useful point of reference regarding styling.</p>
+                            <div class="justify-words">
+                                This was a one-night project early on in the course in which I built a pixel-perfect replica of a web page screen capture (no source code was provided). It was an excellent crash course in CSS that provided a useful point of reference regarding styling.
+                            </div>
+                            <br>
                             <p>
                                 <b><a href="https://gregburton.github.io/surfpaddle/" target="_blank">View Live</a></b><br>
                                 <b><a href="https://github.com/gregburton/surfpaddle" target="_blank">Source Code</a></b>
