edited mo problems copy so that links line up with other projects in its row

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 <h3>Mo' Problems</h3>
                             </header>
                             <div class="justify-words">
-                                This was another weekend assignment that I collaborated on with <a href="http://nickpassarella.github.io/" target="_blank">Nick Passarella</a>, and was one of my first Rails apps. He had to be out of town for the weekend, so we carefully planned out the structure and division of labor for the site in the couple of hours we had before he left. It was excellent practice in working on a project with remote team members, and also got us a lot more comfortable with Git and deploying to Heroku.
+                                This was another weekend assignment that I collaborated on with <a href="http://nickpassarella.github.io/" target="_blank">Nick Passarella</a>, and was one of my first Rails apps. He had to be out of town for the weekend, so we carefully planned out the structure and division of labor for the site in the couple of hours we had before he left. It was excellent practice in working on a project with remote team members, and got us more comfortable with Git and deploying to Heroku.
                             </div>
                             <br>
                             <p>
