updated last-week links to reflect move from jsfiddle to GitHub

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="4u">
                         <!-- Feature -->
                         <section>
-                            <a href="http://fiddle.jshell.net/7aas381y/237/show/light/" class="image featured" target="_blank"><img src="images/last_week_small.png" alt="" /></a>
+                            <a href="http://gregburton.github.io/last-week/" class="image featured" target="_blank"><img src="images/last_week_small.png" alt="" /></a>
                             <header>
                                 <h3>Last Week</h3>
                             </header>
@@ -92,9 +92,9 @@
                             </div>
                             <br>
                             <p>
-                                <b><a href="http://fiddle.jshell.net/7aas381y/237/show/light/" target="_blank">View Live</a></b>
+                                <b><a href="http://gregburton.github.io/last-week/" target="_blank">View Live</a></b>
                                 <br>
-                                <b><a href="http://jsfiddle.net/7aas381y/237/" target="_blank">Source Code</a></b>
+                                <b><a href="https://github.com/gregburton/last-week" target="_blank">Source Code</a></b>
                             </p>
                         </section>
                     </div>
