updated last week copy

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 <h3>Last Week</h3>
                             </header>
                             <div class="justify-words">
-                                This was a weekend assignment that I initially worked on with Noah Holmes and <a href="https://www.linkedin.com/pub/rebecca-conley/74/599/521" target="_blank">Rebecca Conley</a>. It was an early foray into working with an API (in this case, for <a href="http://last.fm/api" target="_blank">last.fm</a>), as well as Ajax and jQuery. The request returns a list of a user's friends and the top artist for each from the past week, along with play count and links. I came up with the idea for this project because this was a feature that was notably missing from the last.fm website.
+                                This was a weekend assignment that I initially worked on with Noah Holmes and <a href="https://www.linkedin.com/pub/rebecca-conley/74/599/521" target="_blank">Rebecca Conley</a>. It was an early foray into working with an API (in this case, for <a href="http://last.fm/api" target="_blank">Last.fm</a>), as well as Ajax and jQuery. After entering in a username, it returns a list of that user's friends and the top artist for each from the past week, along with play count and links. I came up with the idea for this project because it was a feature that was notably missing from the Last.fm website.
                             </div>
                             <br>
                             <p>
