--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Greg Burton | Web Developer. Durham, NC.</title>
+    <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
