--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@
                             </p>
                         </section>
                     </div>
-
                 </div>
                 <div class="row">
                     <br><br>
@@ -156,18 +155,10 @@
                 </div>
             </section>
         </div>
-        <!-- Banner -->
-        <!--<div id="banner-wrapper">-->
-            <!--<div class="inner">-->
-                <!--<section id="banner" class="container">-->
-                    <!--<p>Maybe I can put <strong>something cool</strong> here. Maybe.<br /></p>-->
-                <!--</section>-->
-            <!--</div>-->
-        <!--</div>-->
         <!-- Footer -->
         <div id="copyright" class="container">
             <ul class="links">
-                <li>Design based on a template from <a href="http://html5up.net">HTML5 UP</a></li>
+                <li>Design partially based on a template from <a href="http://html5up.net">HTML5 UP</a></li>
             </ul>
         </div>
 	</body>
